style.css
html {
    font-size: 16px;
}

body {
    background-color: #f2f2f2;
    color: #262626;
    display: flex;
    flex-direction: column;
    font-family:"raleway", sans-serif;
    font-size: 1em;
    line-height: 1.5em;
    margin:1%;
}


/* - - - MOBILE/MAIN STYLE - - - */

header {
    background-color: #7f7f7f;
    display: flex;
    flex-direction: column;
    font-family: 'poiret one', sans-serif;
    font-size: 1.5em;
    padding:10px;
    text-align: center;
    text-transform: lowercase;
}

header h1 {
    line-height: 1.5em;
}

header p {
    color: #ebebeb;
}

ul {
    margin-left: 0px;
    padding-left: 0px;
}

li {
    display: inline;
    list-style-type: none;
    padding: .8em;
    text-transform: lowercase;       
}

a {
    color: antiquewhite;
    font-family: 'poiret one', sans-serif;
    text-decoration: none; 
}

.gallery {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    height: 50vh;
    gap:10px;
    padding: 10px 10px;
    min-width: 400px;
    overflow-x: scroll; 
}

img {
    width: 300px;
    height:200px;
}

footer {
    align-content: center;
    background-color:#e6e6e6;
    display:flex;
    justify-content: center;
    padding-bottom: 2px;
    padding-top: 10px;
}

i {
    color: darkgray;
    font-size: 2em;
    padding: 0 15px;
}


/* - - - ABOUT PAGE - - -  */


article  {
    display: flex;
    flex-wrap: nowrap;
}

article img {
    border-radius: 50%;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    border-top-right-radius: 5px;
    padding: 1em;
    align-self: center;
}

article p {
    padding: 20px;
}


/* - - - FAQ PAGE - - -  */


#faq {
    color:#0d0d0d;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-left:1%;
}


/* - - - SCROLLBAR STYLE - - - */


::-webkit-scrollbar {
    width: .5em;
}

::-webkit-scrollbar-track {
    background: #f1f1f1;
    border-radius: 10px;
    box-shadow: inset 0 0 5px grey;
}

::-webkit-scrollbar-thumb {
    background: #888; 
    border-radius: 10px;
}
 
::-webkit-scrollbar-thumb:hover {
    background: #555; 
}


/* - - - MEDIA QUERIES - - - */

@media (max-width: 767px) {                  
    
    header p {
       display: none;
    }
    
    article img {
        display:none;
    }
    
 }


 @media (min-width: 1200px) {

    .desktop {
        align-items: center;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
    }

    header {
        display: flex;
        height:85vh;
        justify-content: center;
        width:25%;
    }

    header p {
        padding: 0 2em;
    }

    .gallery {
        align-items: center;
        display: flex;
        flex-flow: row wrap;
        height:85vh;
        justify-content: space-around;
        overflow-x: hidden;
        overflow-y: scroll;
        width:75%; 
    }

    article {
        width:85%;
        display: flex;
        flex-direction: row-reverse;
    }
          
    #faq {
        height:85vh;
        overflow-x: hidden;
        overflow-y: scroll;
        width:85%;
    }
 }

